cmake_minimum_required(VERSION 3.9)
project(cpp_primer_codesWhileLearning)

set(CMAKE_CXX_STANDARD 11)

add_executable(cpp_primer_codesWhileLearning main.cpp ch1/ex_1_3.cpp ch1/ex_1_4.cpp ch1/ex_1_5.cpp ch1/ex_1_9.cpp ch1/ex_1_10.cpp ch1/ex_1_11.cpp ch1/ex_1_14.cpp ch1/ex_1_16.cpp ch1/ex_1_19.cpp ch1/ex_1_20.cpp ch1/ex_1_21.cpp ch1/ex_1_22.cpp ch1/ex_1_23.cpp ch1/ex_1_24.cpp)
add_executable(ex_1_3 ch1/ex_1_3.cpp)
add_executable(ex_1_4 ch1/ex_1_4.cpp)
add_executable(ex_1_5 ch1/ex_1_5.cpp)
add_executable(ex_1_9 ch1/ex_1_9.cpp)
add_executable(ex_1_10 ch1/ex_1_10.cpp)
add_executable(ex_1_11 ch1/ex_1_11.cpp)
add_executable(ex_1_14 ch1/ex_1_14.cpp)
add_executable(ex_1_16 ch1/ex_1_16.cpp)
add_executable(ex_1_19 ch1/ex_1_19.cpp)
add_executable(ex_1_20 ch1/ex_1_20.cpp)
add_executable(ex_1_21 ch1/ex_1_21.cpp)
add_executable(ex_1_22 ch1/ex_1_22.cpp)
add_executable(ex_1_24 ch1/ex_1_24.cpp)